terraform/lambda.tf
# ORIGINAL LAMBDA - TEMPORARILY COMMENTED OUT FOR TESTING
# This file has been temporarily commented out for faster testing
# All resources in this file depend on VPC, RDS, S3, Cognito, and Secrets Manager
# which are also commented out. To restore, uncomment the block below and 
# uncomment the dependencies in other .tf files.

# Uncomment the block below to restore original Lambda functionality:
# /*
# IAM Role for Lambda Functions
# resource "aws_iam_role" "lambda_execution_role" {
#   name = "${var.project_name}-${var.environment}-lambda-role"
#   assume_role_policy = jsonencode({
#     Version = "2012-10-17"
#     Statement = [
#       {
#         Action = "sts:AssumeRole"
#         Effect = "Allow"
#         Principal = {
#           Service = "lambda.amazonaws.com"
#         }
#       }
#     ]
#   })
#   tags = {
#     Name = "${var.project_name}-${var.environment}-lambda-role"
#   }
# }
# 
# IAM Policy for Lambda to access VPC, RDS, S3, and Bedrock
# resource "aws_iam_policy" "lambda_policy" {
#   name = "${var.project_name}-${var.environment}-lambda-policy"
#   policy = jsonencode({
#     Version = "2012-10-17"
#     Statement = [
#       {
#         Effect = "Allow"
#         Action = [
#           "logs:CreateLogGroup",
#           "logs:CreateLogStream",
#           "logs:PutLogEvents"
#         ]
#         Resource = "arn:aws:logs:${var.aws_region}:*:*"
#       },
#       {
#         Effect = "Allow"
#         Action = [
#           "ec2:CreateNetworkInterface",
#           "ec2:DescribeNetworkInterfaces",
#           "ec2:DeleteNetworkInterface"
#         ]
#         Resource = "*"
#       },
#       {
#         Effect = "Allow"
#         Action = [
#           "rds-data:BatchExecuteStatement",
#           "rds-data:BeginTransaction",
#           "rds-data:CommitTransaction",
#           "rds-data:ExecuteStatement",
#           "rds-data:RollbackTransaction"
#         ]
#         Resource = aws_rds_cluster.main.arn
#       },
#       {
#         Effect = "Allow"
#         Action = [
#           "s3:GetObject",
#           "s3:PutObject",
#           "s3:DeleteObject",
#           "s3:ListBucket",
#           "s3:CreateBucket",
#           "s3:HeadBucket"
#         ]
#         Resource = [
#           aws_s3_bucket.str_data_store.arn,
#           "${aws_s3_bucket.str_data_store.arn}/*",
#           "arn:aws:s3:::tenant-*",
#           "arn:aws:s3:::tenant-*/*"
#         ]
#       },
#       {
#         Effect = "Allow"
#         Action = [
#           "bedrock:InvokeModel",
#           "bedrock:Retrieve",
#           "bedrock:RetrieveAndGenerate"
#         ]
#         Resource = "*"
#       },
#       {
#         Effect = "Allow"
#         Action = [
#           "secretsmanager:GetSecretValue"
#         ]
#         Resource = [
#           aws_secretsmanager_secret.db_password.arn,
#           aws_secretsmanager_secret.bedrock_kb_secret.arn
#         ]
#       }
#     ]
#   })
# }
# 
# Attach policies to Lambda role
# resource "aws_iam_role_policy_attachment" "lambda_basic_execution" {
#   role       = aws_iam_role.lambda_execution_role.name
#   policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
# }
# 
# resource "aws_iam_role_policy_attachment" "lambda_vpc_execution" {
#   role       = aws_iam_role.lambda_execution_role.name
#   policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
# }
# 
# resource "aws_iam_role_policy_attachment" "lambda_custom_policy" {
#   role       = aws_iam_role.lambda_execution_role.name
#   policy_arn = aws_iam_policy.lambda_policy.arn
# }
# 
# Security Group for Lambda functions
# resource "aws_security_group" "lambda_sg" {
#   name_prefix = "${var.project_name}-${var.environment}-lambda-"
#   vpc_id      = aws_vpc.main.id
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   ingress {
#     from_port   = 443
#     to_port     = 443
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   tags = {
#     Name = "${var.project_name}-${var.environment}-lambda-sg"
#   }
# }
# 
# Lambda function for Cognito Post-Confirmation trigger
# resource "aws_lambda_function" "post_confirmation" {
#   filename      = "post_confirmation.zip"
#   function_name = "text2Agent-Post-Confirmation"
#   role          = aws_iam_role.lambda_execution_role.arn
#   handler       = "index.lambda_handler"
#   runtime       = "python3.11"
#   timeout       = 300
#   vpc_config {
#     subnet_ids         = aws_subnet.private[*].id
#     security_group_ids = [aws_security_group.lambda_sg.id]
#   }
#   environment {
#     variables = {
#       Tenent_db = aws_rds_cluster.main.endpoint
#     }
#   }
#   tags = {
#     Name = "text2Agent-Post-Confirmation"
#   }
#   depends_on = [
#     aws_iam_role_policy_attachment.lambda_basic_execution,
#     aws_iam_role_policy_attachment.lambda_vpc_execution,
#     aws_iam_role_policy_attachment.lambda_custom_policy,
#   ]
# }
# 
# Permission for Cognito to invoke Lambda
# resource "aws_lambda_permission" "allow_cognito_invoke" {
#   statement_id  = "AllowExecutionFromCognito"
#   action        = "lambda:InvokeFunction"
#   function_name = aws_lambda_function.post_confirmation.function_name
#   principal     = "cognito-idp.amazonaws.com"
#   source_arn    = aws_cognito_user_pool.main.arn
# }
# */
